<resources>
    <string name="app_name">MozioTestApp</string>

    <string name="font_family_roboto_regular">sans-serif</string>
    <string name="font_family_roboto_light">sans-serif-light</string>
    <string name="font_family_roboto_thin">sans-serif-thin</string>
    <string name="font_family_roboto_medium">sans-serif-medium</string>
    <string name="home">Home</string>

    <string name="patient_detail">Patient Details</string>
    <string name="patient_name_hint">Patient Name</string>
    <string name="patient_age">Patient Age</string>
    <string name="patient_gender">Patient Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender?</string>
    <string name="submit">Submit</string>
    <string name="error_enter_patient_name">Please enter patient name</string>
    <string name="error_enter_age">Please enter patient age</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="syndrome_result">Syndrome Result</string>

    <string name="patient_number">Patient Number</string>
    <string name="patient_name">Patient Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="previous_chk_res">Previous Check Up Result:</string>
    <string name="error_enter_patient_no">Please enter patient number</string>
    <string name="patient_no">Patient Number:</string>

</resources>
