<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/demin_16_dp"
    tools:context=".ui.home.PatientDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/patient_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name_hint"
            android:paddingBottom="@dimen/dimen_8_dp"
            android:paddingTop="@dimen/dimen_8_dp">

            <EditText
                android:id="@+id/patient_name_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_roboto_regular"
                android:maxLines="1"
                android:textColor="@color/text_black_subtitle" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/patient_age_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_age"
            android:paddingBottom="@dimen/dimen_8_dp"
            android:paddingTop="@dimen/dimen_8_dp">

            <EditText
                android:id="@+id/patient_age_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_roboto_regular"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/text_black_subtitle" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8_dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:gravity="center|left"
                android:padding="4dp"
                android:text="@string/select_gender"
                android:textColor="@color/text_black_hint"
                android:textSize="@dimen/sp18" />

            <RadioGroup
                android:id="@+id/gender_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.6"
                android:gravity="right"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/male_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_10_dp"
                    android:text="@string/male" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/female_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    android:text="@string/female" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_black_hint" />


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/migraines_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15_dp"
            android:padding="4dp"
            android:text="Has migraines?"
            android:textColor="@color/text_black_hint"
            android:textSize="@dimen/sp18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_black_hint" />


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/drug_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15_dp"
            android:padding="4dp"
            android:text="Consumed hallucinogenic drug?"
            android:textColor="@color/text_black_hint"
            android:textSize="@dimen/sp18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_black_hint" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:layout_marginTop="@dimen/dimen_25_dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/dimen_15_dp"
            android:paddingRight="@dimen/dimen_15_dp"
            android:text="@string/submit"
            android:textColor="@color/text_white_subtitle"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />


    </LinearLayout>




</ScrollView>
